# XFaceSDK

./: .gitignore  CMakeLists.txt  README.md  run.sh
doc/: user.json
xfaceapp/: CMakeLists.txt
xfaceapp/config/: config.json
xfaceapp/include/xfaceapp/: log.h
xfaceapp/src/: log.cpp  mian.cpp
xfacesdk/: CMakeLists.txt
xfacesdk/config/: config.json
xfacesdk/include/xfacesdk/: detector.h  imageutils.h  recognizer.h  sdk.h
xfacesdk/src/: detector.cpp  imageutils.cpp  recognizer.cpp  sdk.cpp
